# MIND-CARE-Conversational-ChatBot

./: .gitignore  HANDOVER.md  LICENSE  README.md  SETUP.md  TRANSFER_TO_XAVIER.md  XAVIER_DEPLOY_CHECKLIST.md  XAVIER_INSTALL_GUIDE.md  XAVIER_VERSION_AUDIT.md  rag_crawling.ipynb  requirements.core.txt  requirements.full.txt  requirements.xavier.txt  결과보고서_초안.md  설치환경.ipynb
mind_care_vision/: RUN.md  package.xml  setup.cfg  setup.py
mind_care_vision/config/: hri_params.xavier.yaml  hri_params.yaml
mind_care_vision/launch/: hri_system.launch.py
mind_care_vision/mind_care_vision/: audio_bridge_node.py  llm_dialogue_node.py  rag.py  speaker_verifier.py  tts_node.py
mind_care_vision/scripts/: burn_in.sh  enable_aec.sh  healthcheck.sh  smoke_e2e.sh  start_demo.sh  start_hri.sh  start_llama_server.sh  xavier_bootstrap.sh
mind_care_vision/systemd/: install.sh  mindcare-hri.service  mindcare-llama.service  mindcare.logrotate
mind_care_vision/tools/: build_chroma_by_category.py  build_chroma_disease.py  build_chroma_index.py  build_rag_index.py  enroll_speaker.py  eval_sv.py  rag_retrieve_smoke.py
release/emergency/mind_care_api/: package.xml  setup.cfg  setup.py
release/emergency/mind_care_api/config/: api_params.yaml
release/emergency/mind_care_api/demo_client/: README.md  gen_alarm.py  index.html
release/emergency/mind_care_api/launch/: api_gateway.launch.py
release/emergency/mind_care_api/mind_care_api/: api_gateway_node.py  app.py  auth.py  db.py  ros_bridge.py  schemas.py  ws.py
release/emergency/mind_care_api/mind_care_api/routes/: alerts.py  guardians.py  reports.py  status.py
release/emergency/mind_care_emergency/: conftest.py  package.xml  setup.cfg  setup.py
release/emergency/mind_care_emergency/config/: emergency_params.yaml
release/emergency/mind_care_emergency/launch/: emergency.launch.py
release/emergency/mind_care_emergency/mind_care_emergency/: alert_dispatcher_node.py  alerts_db.py  decider_states.py  emergency_decider_node.py
release/emergency/mind_care_emergency/mind_care_emergency/channels/: __init__.py  base.py  buzzer_channel.py  fcm.py  local_buzzer.py  mock.py  twilio_sms.py
release/emergency/mind_care_emergency/tests/: test_decider_states.py
release/vision/mind_care_perception/: package.xml  setup.cfg  setup.py
release/vision/mind_care_perception/config/: labels_emotion.txt  pgie_yolov8n_face.txt  pgie_yolov8n_pose.txt  sgie_emotion.txt  tracker_NvDCF.yml
release/vision/mind_care_perception/launch/: fall_detection.launch.py  perception_camera.launch.py  perception_dryrun.launch.py
release/vision/mind_care_perception/mind_care_perception/: ds_metadata.py  ds_pipeline.py  ds_pose_metadata.py  ds_pose_pipeline.py  fall_detection_node.py  fall_rules.py  vision_deepstream_node.py  vision_emulator_node.py
release/vision/mind_care_perception/scripts/: convert_urfdd_gt.py  download_urfdd.sh  emotion_models.py  eval_fall.py  prepare_models.py  run_fall_test.sh  run_test_mode.sh  train_emotion.py  visualize_keypoints.py
release/vision/mind_care_perception/src/parser_yolov8_face/: Makefile  (+1 more)
(+36 files in other folders)
