<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mind_care_perception</name>
  <version>0.2.0</version>
  <description>마음돌봄 Vision 인지 노드 — Phase 1 dry-run 에뮬레이터 + Phase 2 DeepStream 8.0 (YOLOv8n-face + Emotion SGIE).</description>
  <maintainer email="team-potato@example.com">포테토 팀</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
